--- a/server/index.ejs
+++ b/server/index.ejs
@@ -28,7 +28,8 @@
                                         <h4> User <%= printer.job.user %> started <%= printer.job.file.name %> </h4>
                                         <h4> at <%= printer.printJobStarted %> for <%= printer.estimatedPrintTime %> </h4>
                                 <% } %>
-                                <h4><a href="http://<%= ipPrinter %>/webcam/?action=stream" target="_blank" rel="noopener noreferrer">View Webcam</a></h4> <!--<button id="lights" onClick="toggle()">Toggle Lights</button>-->
+                                <h4><a href="http://<%= ipPrinter %>/webcam/?action=stream" target="_blank" rel="noopener noreferrer">View Webcam</a></h4> 
+<!--<button id="lights" onClick="toggle()">Toggle Lights</button>-->
                                 <hr>
                                 <h4><a href="http://<%= ipPrinter %>/#control" target="_blank" rel="noopener noreferrer">Go to Control Page</a></h4>
                         </div>
