--- a/server/index.ejs
+++ b/server/index.ejs
@@ -10,6 +10,7 @@
                 a { color:#BDF7B7; }
                 h3 { color:black; }
         </style>
+        <meta http-equiv="refresh" content="5">
 </head>
 <body class="container">
         <header>
